<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    app:layout_anchorGravity="center_vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_margin="4dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/student"
        tools:srcCompat="@drawable/student" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:columnCount="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/fname"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/fnameLabel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lname"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/lnameLabel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_class"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/classLabel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/bdate"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/bdLabel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/id"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/idLabel"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>